Agrego estructura principal de directorios

--- a/index.html
+++ b/index.html
@@ -20,20 +20,25 @@
         
         <div class="card one">
             <p class="cantidadCursos"></p>
-            <p>Listado de cursos: </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate officiis, rem minima ipsa earum, expedita natus perspiciatis cum, a iure fugiat eligendi odit! Ut consectetur hic quas maiores. Voluptates, ipsum.</p>
             <p class="listaCursos"></p>
         </div>
         <div class="card two">
             <p class="bienvenido">Bienvenido</p>
             <p>Usuario:</p>
             <p class="user"></p>
+            <p>Email:</p>
+            <p class="mail"></p>
             <p>Curso:</p>
             <p class="curso"></p>
             <p>Estado:</p>
             <p class="estadoCurso"></p>
         </div>
         <div class="card three">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere iure in accusamus velit deleniti recusandae voluptates assumenda iusto asperiores repellat dolorem, ducimus est vel labore doloribus, ab necessitatibus ipsa eveniet?</p>
+            <p id="notas"></p>
+            <p id="empleado"></p>
+            <p id="productos"></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil vel dolore illo placeat alias veritatis quam quaerat dolorum veniam quo, accusantium blanditiis, perferendis doloribus beatae eligendi corporis et, odit velit.</p>
         </div>
         <div class="card four">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam animi suscipit id recusandae voluptate accusantium dolores doloribus dignissimos veritatis, odio corrupti et officiis minus a, fugiat inventore deleniti totam delectus?</p>
