Agrego modificaciones de estilo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil vel dolore illo placeat alias veritatis quam quaerat dolorum veniam quo, accusantium blanditiis, perferendis doloribus beatae eligendi corporis et, odit velit.</p>
         </div>
         <div class="card four">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam animi suscipit id recusandae voluptate accusantium dolores doloribus dignissimos veritatis, odio corrupti et officiis minus a, fugiat inventore deleniti totam delectus?</p>
+            <form>
+                <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="user_name">
+                <label for="mail">Correo electrónico:</label>
+                    <input type="email" id="mail" name="user_mail">
+                <label for="msj">Mensaje:</label>
+                    <input type="text" id="msj" name="user_msj">
+                <button type="submit">Enviar</button>
+
+            </form>
         </div>
         <div class="card five">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium voluptatibus doloribus impedit tempore eveniet animi nesciunt. Cum voluptas est, tempore esse ea soluta asperiores repudiandae! Nam aperiam aliquid vel cumque.</p>
